tests/build/widget_new/missing_value_before_when1.stderr
error: expected `;`
 --> $DIR/missing_value_before_when1.rs:7:9
  |
7 |         when self.is_pressed {
  |         ^^^^

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/missing_value_before_when1.rs:7:9
   |
7  |         when self.is_pressed {
   |         ^^^^- supplied 0 arguments
   |         |
   |         expected 1 argument
   |
note: associated function defined here
  --> $DIR/layout.rs:36:1
   |
36 | #[property(outer, default(0))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
